--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Memvat Tests</title>
-    <script src="../lib/memvat.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../lib/evtvat.js" type="text/javascript" charset="utf-8"></script>
     <script src="test.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
