refined event capture, added events section

--- a/test/test.html
+++ b/test/test.html
@@ -19,6 +19,8 @@
     <br/><br/>
     <script>
 
+      var vat = EventVat();
+
       nodeunit.run({
         'Events': eventSuite,
         'Methods': methodSuite
