[lib] API parity sprint

--- a/test/test.html
+++ b/test/test.html
@@ -1,9 +1,8 @@
-<DOCTYPE html>
 <html>
   <head>
-    <title>EventVat unit tests.</title>
+    <script src="../vendor/nodeunit/nodeunit.js"></script>
+    <script src="../vendor/EventEmitter2/EventEmitter2.js"></script>
     <script src="../lib/EventVat.js"></script>
-    <script src="vendor/nodeunit/nodeunit.js"></script>
     <script src="eventSuite.js"></script>
     <script src="methodSuite.js"></script>
     <style>
